--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -15,12 +15,38 @@
 
   <ion-card>
     <ion-card-content>
-      <center><ion-img src="assets/pictures/17.png"></ion-img></center>
-        <ion-label>kimberlyarizo14@gmail.com</ion-label>
-      <center><ion-img src="assets/pictures/18.png"></ion-img></center>
-        <ion-label>Kimberly Arizo</ion-label>
-      <center><ion-img src="assets/pictures/19.png"></ion-img></center>
-        <ion-label>09556377399</ion-label>
+    <ion-item>
+        <ion-label position="floating">Contact Name</ion-label>
+        <ion-input [(ngModel)]="contName"></ion-input>
+    </ion-item>
+    <ion-item>
+        <ion-label position="floating">Contact Number</ion-label>
+        <ion-input [(ngModel)]="contNumber"></ion-input>
+    </ion-item>
+      <ion-button expand="full" color="primary" (click)="save()">Save Contact</ion-button>
+    <ion-list>
+    <ion-item-sliding id="item100" *ngFor="let cont of contacts">
+    <ion-item>
+        <ion-avatar slot="start">
+          <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
+        </ion-avatar>
+      <ion-label>
+          <h4>{{cont.name}}</h4>
+          <h4>{{cont.number}}</h4>
+      </ion-label>
+    </ion-item>
+      <ion-item-options side="end">
+        <ion-item-option color="danger">
+        <ion-icon slot="icon-only" name="trash" (click)="confirm(cont)"></ion-icon>
+        </ion-item-option>
+        <ion-item-option>
+          <ion-icon slot="icon-only" name="mail"></ion-icon>
+        </ion-item-option>
+
+      </ion-item-options>
+
+      </ion-item-sliding>
+    </ion-list>
     
   </ion-card-content>
 </ion-card>
