--- a/src/app/tab3/tab3.page.scss
+++ b/src/app/tab3/tab3.page.scss
@@ -1,8 +1,7 @@
-ion-img{
-	height: 100px;
-	width: 100px;
-	margin-top: 20px;
-	
+h4{
+	color: violet;
+	font-weight: 15px;
+	font-size: 20px;
 }
 
 ion-card{
