--- a/src/app/pages/message/message.page.html
+++ b/src/app/pages/message/message.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
-  	<ion-buttons slot="start">
-      <ion-back-button default ref="/tab3"></ion-back-button>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/tab3"></ion-back-button>
     </ion-buttons>
     <ion-title>Message</ion-title>
   </ion-toolbar>
